@@ -2,6 +2,7 @@
   xmlns="http://namespaces.zope.org/browser"
   i18n_domain="eea.daviz">
 
+  <include package="eea.forms" />
   <include package="eea.exhibit" />
   <include package="p4a.z2utils" />
   <include package="collective.js.jqueryui" />
