@@ -33,6 +33,7 @@ setup(name=NAME,
       zip_safe=False,
       install_requires=[
           'setuptools',
+          'eea.forms',
           'eea.exhibit',
           'p4a.z2utils',
           'collective.js.jqueryui',
