@@ -5,6 +5,9 @@ Changelog
 ----------------------
  * Upgrade step: Within "Plone > Site setup > Add-ons" click on
   upgrade button available for eea.daviz
+ * Feature: Added QuickUpload field to DavizPresentation Schema in order
+   to easily upload new TAB separated files as data sources
+   [voineali #4965]
  * Change: changed texts for visualizations, changed Data Sources to be mandatory [szabozo0 #4948]
  * Bug fix: properly link images in css files [tiberich #4956]
  * Change: corrected daviz presentation description [demarant]
